unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/SpringCMEos__DSWConfig__c.object-meta.xml
<CustomObject>
    <label>Get It! Configuration</label>
    <nameField>
        <label>Get It! Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Get It!</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>