unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Any_Attribute_Field__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Any_Attribute_Field__c</fullName>
    <label>Any Attribute Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>