unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Any_Words__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Any_Words__c</fullName>
    <label>Any Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>