unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Content__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Content__c</fullName>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>