unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Description__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>