unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__DSWName__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__DSWName__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>