unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__EOS_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__EOS_Object_Id__c</fullName>
    <label>EOS Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>