unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__EOS_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__EOS_Object_Type__c</fullName>
    <label>EOS Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>