unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__In_Folder__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__In_Folder__c</fullName>
    <label>In Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>