unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Include_Sub_Folders__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Include_Sub_Folders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Sub Folders</label>
    <type>Checkbox</type>
</CustomField>