unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__JSON_Configuration__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__JSON_Configuration__c</fullName>
    <label>JSON_Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>