unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__JSON_Format__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__JSON_Format__c</fullName>
    <label>JSON Format</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>