unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Phrase__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Phrase__c</fullName>
    <label>Phrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>