unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Title__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>