unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Types__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Types__c</fullName>
    <label>Types</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>