unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__UpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__UpdatedBy__c</fullName>
    <label>UpdatedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>