unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__UpdatedOnOrAfter__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__UpdatedOnOrAfter__c</fullName>
    <label>UpdatedOnOrAfter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>