unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Variables__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Variables__c</fullName>
    <label>Variables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>