unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/fields/SpringCMEos__Without_Words__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Without_Words__c</fullName>
    <label>Without Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>