unpackaged/main/default/objects/SpringCMEos__DSWConfig__c/listViews/SpringCMEos__All.listView-meta.xml
<ListView>
    <fullName>SpringCMEos__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>